# conan-lzmasdk

./: CMakeLists.txt  add_pthread.patch  conanfile.py
test_package/: conanfile.py
